--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,20 @@
-click==7.1.2
-Flask==1.1.2
-itsdangerous==1.1.0
-Jinja2==2.11.2
-MarkupSafe==1.1.1
-Werkzeug==1.0.1
+astroid==2.13.3
 black==22.12.0
+click==8.1.3
+dill==0.3.6
+Flask==2.0.3
+isort==5.11.4
+itsdangerous==2.1.2
+Jinja2==3.1.2
+lazy-object-proxy==1.9.0
+MarkupSafe==2.1.2
+mccabe==0.7.0
+mypy-extensions==0.4.3
+pathspec==0.10.3
+platformdirs==2.6.2
 pylint==2.15.10
+tomli==2.0.1
+tomlkit==0.11.6
+typing_extensions==4.4.0
+Werkzeug==2.2.2
+wrapt==1.14.1
